[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/cell.png" type="Texture" id=1]
[ext_resource path="res://scripts/cell.gd" type="Script" id=2]
[ext_resource path="res://textures/target.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Cell" type="KinematicBody2D"]
pause_mode = 2
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Target" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
z_index = 1
texture = ExtResource( 3 )

[node name="RadiusSearchFood" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="RadiusSearchFood"]
position = Vector2( 120, 0 )
polygon = PoolVector2Array( -105, -10, -105, 10, 30, 50, 30, -50 )

[connection signal="input_event" from="." to="." method="_on_Cell_input_event"]
[connection signal="body_entered" from="RadiusSearchFood" to="." method="_on_RadiusSearchFood_body_entered"]
[connection signal="body_exited" from="RadiusSearchFood" to="." method="_on_RadiusSearchFood_body_exited"]
